syntax = "proto3";

package perpetuals.market.v1;
option csharp_namespace = "Perpetuals.Market.Protobuf";

message SettlementQuantity {
  bytes position_id = 1;
  uint64 quantity = 2;
}